--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -3,6 +3,9 @@
 <head th:replace="~{layout::head}">
 </head>
 <body>
+<div th:if="${success}">
+    <span th:text="${success}" id="success" style="display: none"></span>
+</div>
 <div class="container">
     <header th:replace="~{layout::header}"></header>
     <section>
@@ -154,6 +157,20 @@
         $("#name-delete").html(name)
         $("#active-delete").attr("href", "/dashboard/movies/delete/" + id)
     }
+</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        let success = document.getElementById("success").innerText;
+        console.log(success)
+        Swal.fire({
+            title: success,
+            icon: 'success',
+            timer: 1500,
+            timerProgressBar: true,
+            showConfirmButton: false
+        });
+    });
 </script>
 </body>
 </html>
