--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -17,7 +17,7 @@
                 <div class="create">
                     <a href="/dashboard/movies/add"><i class="fa-solid fa-square-plus"></i> Thêm phim mới</a>
                 </div>
-                <div class="table-main">
+                <div class="table-main" style="height: 380px;">
                     <div class="search-table">
                         <form action="/dashboard/movies/search">
                             <div class="row">
@@ -51,7 +51,7 @@
                             </div>
                         </form>
                     </div>
-                    <table class="table table-hover" style="text-align: center">
+                    <table class="table table-hover">
                         <thead>
                         <tr>
                             <th scope="col">STT</th>
