--- a/movie-ticket/src/main/resources/templates/showtime/view-showtime.html
+++ b/movie-ticket/src/main/resources/templates/showtime/view-showtime.html
@@ -16,7 +16,7 @@
                     <a th:href="@{/dashboard/showtime/add/__${movie.id}__}"><i class="fa-solid fa-square-plus"></i> Thêm
                         suất chiếu</a>
                 </div>
-                <div class="table-main">
+                <div class="table-main" style="height: 380px;">
 <!--                    <div class="search-table">-->
 <!--                        <form action="/dashboard/movies/search">-->
 <!--                            <div class="row">-->
