--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -59,7 +59,7 @@
                             <th scope="col">ĐẠO DIỄN</th>
                             <th scope="col">NGÀY CÔNG CHIẾU</th>
                             <th scope="col">DANH MỤC</th>
-                            <th scope="col">THAO TÁC</th>
+                            <th scope="col" style="text-align: center">THAO TÁC</th>
                         </tr>
                         </thead>
                         <tbody>
