--- a/movie-ticket/src/main/resources/templates/index.html
+++ b/movie-ticket/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         </div>
     </section>
     <section class="my-5" id="list-fim-home">
-        <h3>Phim chiếu rạp hot</h3>
+        <h3>Phim sắp chiếu</h3>
         <div class="row mt-3">
             <div class="col-lg-2 my-3" th:each="movie: ${movies}">
                 <a th:href="@{/movie/detail/__${movie.id}__}">
