--- a/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
+++ b/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
@@ -49,7 +49,7 @@
                             <th scope="col">TÊN PHIM</th>
                             <th scope="col">SỐ ĐIỆN THOẠI</th>
                             <th scope="col">NGÀY CHIẾU</th>
-                            <th scope="col">GIÁ(VNĐ)</th>
+                            <th scope="col">GIÁ (đ)</th>
                             <th scope="col">CHỨC NĂNG</th>
                         </tr>
                         </thead>
