--- a/movie-ticket/src/main/resources/templates/dashboard.html
+++ b/movie-ticket/src/main/resources/templates/dashboard.html
@@ -8,7 +8,7 @@
 <div class="container">
   <header th:replace="~{layout::header}"></header>
 <!--  Danh cho role User-->
-  <section sec:authorize="hasRole('USER') && !hasRole('ADMIN')">
+  <section sec:authorize="hasRole('USER') && !hasRole('ADMIN') && !hasRole('EMPLOYEE')">
     <div class="row my-5 dashboard-user">
       <div class="col-lg-3 sidebar-user">
           <div th:replace="~{layout::sidebar-user}"></div>
@@ -19,7 +19,7 @@
             <img src="https://github.com/mdo.png" alt="mdo" width="100px" height="100px" class="rounded-circle">
           </div>
           <div class="info-user">
-            <h3 th:text="${account.customer.fullName}">Phạm Văn Thành</h3>
+            <h3 th:if="${account.customer.fullName}" th:text="${account.customer.fullName}">Phạm Văn Thành</h3>
             <p th:text="${'@'+account.username}">@thanhpv</p>
           </div>
         </div>
