--- a/movie-ticket/src/main/resources/templates/layout.html
+++ b/movie-ticket/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/libs/fontawesome/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" type="image/x-icon" href="/image/favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
@@ -233,6 +234,9 @@
     </div>
     <div th:fragment="js">
         <script src="/js/jquery-3.7.1.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         <script src="/libs/tinymce/tinymce.min.js"></script>
         <script src="/libs/bootstrap/js/bootstrap.bundle.js"></script>
         <script src="/js/main.js"></script>
