--- a/movie-ticket/src/main/resources/templates/employee/edit-employee.html
+++ b/movie-ticket/src/main/resources/templates/employee/edit-employee.html
@@ -58,9 +58,8 @@
                     <div class="row mb-3">
                         <label for="account" class="col-sm-2 col-form-label">Account:</label>
                         <div class="col-sm-10">
-                            <select type="text" class="form-select" id="account" th:field="*{account}">
-                                <option th:each="item:${accountList}" th:text="${item.username}" th:value="${item.id}"></option>
-                            </select>
+                            <input type="hidden" class="form-select" id="account" readonly th:field="*{account}" th:label="*{account.username}">
+                            <input type="text" class="form-select" readonly th:value="*{account.username}">
                         </div>
                     </div>
 
