--- a/movie-ticket/src/main/resources/templates/index.html
+++ b/movie-ticket/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
         </div>
     </section>
     <section class="my-5" id="category-film">
-        <h3>Thể loại Phim</h3>
+        <h3>Thể loại phim</h3>
         <div class="row mt-3">
             <div class="col-lg-3 my-3" th:each="category: ${categories}">
                 <a th:href="@{/movie/category/__${category.id}__}">
