--- a/movie-ticket/src/main/resources/templates/movie/movie-sorted.html
+++ b/movie-ticket/src/main/resources/templates/movie/movie-sorted.html
@@ -5,27 +5,27 @@
 <body>
 <div class="container">
   <header th:replace="~{layout::header}"></header>
-  <section id="banner-home">
-    <div class="row mt-5">
-      <div class="col-md-12">
-        <div class="card text-bg-dark">
-          <img src="/image/banner-source.png" class="card-img" alt="...">
-          <div class="card-img-overlay d-flex align-items-end">
-            <div class="p-lg-3 mb-lg-4 p-md-0 mb-md-0 bg-body-tertiary rounded-3">
-              <div class="container">
-                <h3 class="display-5 fw-bold">Vầng Trăng Máu</h3>
-                <p class="text-secondary-custom">Thể loại: Hành động</p>
-                <p class="text-secondary-custom">Đạo diễn: Martin Scorsese</p>
-                <p class="text-secondary-custom">Diễn viên chính: Leonardo DiCaprio</p>
-                <p class="text-secondary-custom">Khởi chiếu vào ngày 10/11/2023</p>
-                <a href="#" role="button" class="btn btn-primary">Đặt vé ngay</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+<!--  <section id="banner-home">-->
+<!--    <div class="row mt-5">-->
+<!--      <div class="col-md-12">-->
+<!--        <div class="card text-bg-dark">-->
+<!--          <img src="/image/banner-source.png" class="card-img" alt="...">-->
+<!--          <div class="card-img-overlay d-flex align-items-end">-->
+<!--            <div class="p-lg-3 mb-lg-4 p-md-0 mb-md-0 bg-body-tertiary rounded-3">-->
+<!--              <div class="container">-->
+<!--                <h3 class="display-5 fw-bold">Vầng Trăng Máu</h3>-->
+<!--                <p class="text-secondary-custom">Thể loại: Hành động</p>-->
+<!--                <p class="text-secondary-custom">Đạo diễn: Martin Scorsese</p>-->
+<!--                <p class="text-secondary-custom">Diễn viên chính: Leonardo DiCaprio</p>-->
+<!--                <p class="text-secondary-custom">Khởi chiếu vào ngày 10/11/2023</p>-->
+<!--                <a href="#" role="button" class="btn btn-primary">Đặt vé ngay</a>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </section>-->
   <section id="list-fim-home" class="my-5">
     <h3 th:text="${category.nameCategory}">Phim chiếu rạp hot</h3>
     <div class="row mt-3">
