--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -21,26 +21,24 @@
                     <div class="search-table">
                         <form action="/dashboard/movies/search">
                             <div class="row">
-                                <div class="col-lg-5">
-                                    <div class="col-lg-6 form-floating mb-3">
-                                        <input class="form-control" id="idMovie" name="idMovie" placeholder=""
-                                               th:value="${idMovie}" type="text">
-                                        <label for="idMovie"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo mã
-                                            phim</label>
-                                    </div>
+                                <div class="col-lg-3">
                                 </div>
-                                <div class="col-lg-7 d-flex justify-content-between">
+                                <div class="col-lg-9 d-flex justify-content-between">
                                     <div class="col-auto form-floating mt-1">
-                                        <a style="font-size: 1.4em; color: #e20442" href="/dashboard/movies" title="Tải lại"><i class="fa-solid fa-rotate-right"></i></a>
+                                        <a style="font-size: 1.4em; color: #e20442" href="/dashboard/movies"
+                                           title="Tải lại"><i class="fa-solid fa-rotate-right"></i></a>
                                     </div>
                                     <div class="col-auto form-floating mb-3">
                                         <input class="form-control" id="nameFilm" name="nameMovie" placeholder=""
-                                               th:value="${nameMovie}" type="text" required>
+                                               th:value="${nameMovie}" type="text">
                                         <label for="nameFilm"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo tên
                                             phim</label>
                                     </div>
                                     <div class="col-auto form-floating mb-3">
-                                        <input class="form-control" id="dateOrder" type="date" disabled>
+                                        <input style="min-width: 250px;" class="form-control" id="dateOrder"
+                                               type="text"/>
+                                        <input id="startDate" type="hidden" name="startDate"/>
+                                        <input id="endDate" type="hidden" name="endDate"/>
                                         <label for="dateOrder"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo
                                             thời gian</label>
                                     </div>
@@ -63,7 +61,9 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr><td colspan="6" th:if="${movies.isEmpty()}" style="text-align: center">Không có kết quả</td></tr>
+                        <tr>
+                            <td colspan="6" th:if="${movies.isEmpty()}" style="text-align: center">Không có kết quả</td>
+                        </tr>
                         <tr th:unless="${movies.isEmpty()}" th:each="movie, count : ${movies}">
                             <td th:text="${(movies.number)*movies.pageable.pageSize+count.count}">#12921</td>
                             <td th:text="${movie.title}">Vầng Trăng Máu</td>
@@ -75,7 +75,8 @@
                                         class="fa-solid fa-file-lines"></i></a>
                                 <a th:href="@{/dashboard/movies/update/__${movie.id}__}" title="Sửa"><i
                                         class="fa-solid fa-pen-to-square"></i></a>
-                                <a th:href="@{/dashboard/showtime/view-showtime/__${movie.id}__}" title="Xem lịch chiếu">
+                                <a th:href="@{/dashboard/showtime/view-showtime/__${movie.id}__}"
+                                   title="Xem lịch chiếu">
                                     <i class="fa-solid fa-calendar-week"></i></a>
                                 <!--<a th:href="@{/dashboard/movies/delete/__${movie.id}__}" title="Xóa"><i class="fa-solid fa-trash-can"></i></a>-->
                                 <a data-bs-target="#exampleModal" data-bs-toggle="modal"
@@ -93,24 +94,21 @@
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()}+ '?page=' +
                             ${movies.number - 1} +
-                            ${nameMovie != null && nameMovie != '' ? '&nameMovie='+nameMovie:''} +
-                            ${idMovie != null && idMovie != '' ? '&idMovie='+idMovie:''}
+                            ${nameMovie != null && nameMovie != '' ? '&nameMovie='+nameMovie:''}
                             }">Trước</a>
                         </li>
                         <li th:class="${i == movies.number ? 'page-item active' : 'page-item'}"
                             th:each="i : ${#numbers.sequence(0, movies.totalPages - 1)}">
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()} + '?page=' + ${i} +
-                            ${nameMovie != null && nameMovie != '' ? '&nameMovie='+nameMovie:''} +
-                            ${idMovie != null && idMovie != '' ? '&idMovie='+idMovie:''}
+                            ${nameMovie != null && nameMovie != '' ? '&nameMovie='+nameMovie:''}
                             }" th:text="${i + 1}"></a>
                         </li>
                         <li th:class="${movies.hasNext() ? 'page-item' : 'page-item disabled'}">
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()} + '?page=' +
                             ${movies.number + 1} +
-                            ${nameMovie != null && nameMovie != '' ? '&nameMovie='+nameMovie:''} +
-                            ${idMovie != null && idMovie != '' ? '&idMovie='+idMovie:''}
+                            ${nameMovie != null && nameMovie != '' ? '&nameMovie='+nameMovie:''}
                             }">Sau</a>
                         </li>
                     </ul>
@@ -153,6 +151,26 @@
 
 <footer th:replace="~{layout::footer}"></footer>
 <script>
+    $(document).ready(function () {
+        $('#dateOrder').daterangepicker({
+            startDate: '08/11/2023',
+            endDate: '11/11/2023',
+            locale: {
+                format: 'DD-MM-YYYY'
+            },
+            language: 'vi'
+
+        }, function (start, end, label) {
+            let startDate = start.format("YYYY-MM-DD");
+            let endDate = end.format("YYYY-MM-DD");
+            $("#startDate").val(startDate);
+            $("#endDate").val(endDate);
+        });
+
+        $('#startDate').val('2023-11-08');
+        $('#endDate').val('2023-11-11');
+    });
+
     function sendDataModal(id, name) {
         $("#name-delete").html(name)
         $("#active-delete").attr("href", "/dashboard/movies/delete/" + id)
@@ -171,6 +189,7 @@
             showConfirmButton: false
         });
     });
+
 </script>
 </body>
 </html>
