--- a/movie-ticket/src/main/resources/templates/payment-success.html
+++ b/movie-ticket/src/main/resources/templates/payment-success.html
@@ -44,7 +44,7 @@
                                     <label for="datePurchased" class="col-sm-4 col-form-label">Ngày mua:</label>
                                     <div class="col-sm-8">
                                         <input type="text" readonly class="form-control-plaintext" id="datePurchased"
-                                               th:value="${booking.datePurchased}">
+                                               th:value="${#temporals.format(booking.datePurchased,'dd-MM-yyyy')}">
                                     </div>
                                 </div>
                                 <div class="mb-3 row">
