--- a/movie-ticket/src/main/resources/templates/user/dashboard-user-purchased-view.html
+++ b/movie-ticket/src/main/resources/templates/user/dashboard-user-purchased-view.html
@@ -38,7 +38,7 @@
                     <label for="datePurchased" class="col-sm-3 col-form-label">Ngày mua:</label>
                     <div class="col-sm-9">
                         <input type="text" readonly class="form-control-plaintext" id="datePurchased"
-                               th:value="${booking.datePurchased}">
+                               th:value="${#temporals.format(booking.datePurchased,'dd-MM-yyyy')}">
                     </div>
                 </div>
                 <div class="mb-3 row">
